cmake_minimum_required(VERSION 2.6)

PROJECT(disconnect C)
ADD_DEFINITIONS(-Os -Wall --std=gnu99 -g3 -Wmissing-declarations -D_GNU_SOURCE)

OPTION(LIBNL_LIBRARY_TINY "Use LEDE/OpenWrt libnl-tiny" OFF)

SET(SOURCES main.c)

ADD_EXECUTABLE(disconnect ${SOURCES})

IF(LIBNL_LIBRARY_TINY)
        TARGET_LINK_LIBRARIES(disconnect nl-tiny)
ELSE()
        FIND_LIBRARY(LIBNL_LIBRARY NAMES nl-3 nl)
        FIND_LIBRARY(LIBNL_GENL_LIBRARY NAMES nl-genl-3 nl-genl)
        TARGET_LINK_LIBRARIES(disconnect ${LIBNL_LIBRARY} ${LIBNL_GENL_LIBRARY})
        FIND_PATH(LIBNL_LIBRARY_INCLUDE_DIR NAMES netlink/netlink.h PATH_SUFFIXES libnl3)
        INCLUDE_DIRECTORIES(${LIBNL_LIBRARY_INCLUDE_DIR})
ENDIF()

SET(CMAKE_INSTALL_PREFIX /usr)

INSTALL(TARGETS disconnect RUNTIME DESTINATION sbin)